--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,115 +1,93 @@
-PA1_template.Rmd
-==================================
+---
+title: "Steps Monitoring Data"
+author: "Symphony"
+---
 
-##Loading and preprocessing the data
-
+## Loading and Preprocessing Data
+  
 ```{r}
-oridata<-read.csv("activity.csv")
-oridata$date<-as.character(oridata$date)
-oridata$date<-as.Date(oridata$date)
-str(oridata)
+data<-read.csv("activity.csv")
+str(data)
+data$date<-as.character(data$date)
+data$date<-as.Date(data$date)
+str(data)
+
 ```
-
-Now we have a dataframe of the dataset with appropriate type for the analysis.
-
-##What is mean total of steps taken per day?
-
-1. We first make a histogram of the total number of steps taken each day.
-
+  
+## What is mean total number of steps taken per day?
+  
 ```{r}
-data<-na.omit(oridata) #totally remove all cases whith NA
-combine<-aggregate(data$steps,by=list(data$date),FUN=sum,na.rm=TRUE)
-names(combine)<-c("date","total_steps")
-head(combine)
-hist(combine$total_steps,col="green",xlab="Total Number of Steps",ylab="Frequency",main="Histogram of total steps each day")
+daysteps<-aggregate(data$steps,by=list(data$date),FUN=sum,na.rm=TRUE)
+names(daysteps)<-c("date","totalsteps")
+hist(daysteps$totalsteps,breaks = 10,col="green",main="Histogram of total number of steps taken each day",xlab="Number of Steps")
+mean<-mean(daysteps$totalsteps)
+median<-quantile(x = daysteps$totalsteps,probs = c(0.5))
+mean
+median
 ```
-
-2. Now we calculate the mean and median of total number of steps taken per day.
-
+  
+  The mean  = 9354.23 and median = 10395
+  
+## What is the average daily activity pattern?
+  
 ```{r}
-mean<-mean(combine$total_steps,na.rm=TRUE)
-median<-median(combine$total_steps,na.rm=TRUE)
+intervalsteps<-aggregate(data$steps,by=list(data$interval),FUN=mean, na.rm=TRUE)
+str(intervalsteps)
+names(intervalsteps)<-c("interval","averagesteps")
+plot(x = intervalsteps$interval,y=intervalsteps$averagesteps,type = "l",main="Time series of average steps",xlab ="5 minutes interval", ylab="Average steps" )
+intervalsteps[intervalsteps$averagesteps==max(intervalsteps$averagesteps),]
 ```
-
-The mean is `r mean`.
-The median is `r median`.
-
-##What is the average daily activity pattern?
+ 
+ The time interval 0835 contains the maximum number of steps with value 206.1698, on average across all the days in the dataset.
+ 
+## Imputing missing values
 
 ```{r}
-combine2<-aggregate(data$steps,by=list(data$interval),FUN=mean,na.rm=TRUE)
-names(combine2)<-c("interval","average_steps")
-head(combine2)
-plot(combine2$interval,combine2$average_steps,type="l",main="Average Daily Activity Pattern",xlab="Time Interval",ylab="Average steps taken")
-maxtime<-combine2$interval[combine2$average_steps==max(combine2$average_steps)]
-print(maxtime)
+table(is.na(data$steps))
+
+# replace missing values with average steps for each time interval across all the days
+newdata<-data
+newdata$steps[is.na(data$steps)]<-intervalsteps$averagesteps[match(data$interval[is.na(data$steps)],table=intervalsteps$interval)]
+table(is.na(newdata$steps)) #newdata is a new dataset that is equal to the original dataset but with the missing data filled in
+
+newdaysteps<-aggregate(newdata$steps,by=list(newdata$date),FUN=sum,na.rm=TRUE)
+names(newdaysteps)<-c("date","totalsteps")
+hist(newdaysteps$totalsteps,breaks = 10,col="green",main="Histogram of total number of steps taken each day for new data set",xlab="Number of Steps")
+newmean<-mean(newdaysteps$totalsteps)
+newmedian<-quantile(x = newdaysteps$totalsteps,probs = c(0.5))
+newmean
+newmedian
+diffmean<-mean-newmean
+diffmedian<-median-newmedian
+diffmean
+diffmedian
+
+
 ```
-
-Hence, the time interval which has maximum average number of steps is `r maxtime`.  
-Note: time interval in the format of *hmm* or *hhmm* in 24hrs time format.
-
-##Inputing missing values
-1. Calculate and report the total number of missing value.
+  
+  There are 2304 missing values (number of rows with NA value for steps). I replace the missing values with average steps for each time interval across all the days.
+  
+  For new data set with missing values replaced, mean = 10766.19 and median = 10766.19
+  
+  The difference between the two means = 1411.959 in value and between two medians = 371.1887 in value.
+  
+  The impact of replacing missing data increased  the value of mean and median and the histogram looks more like a bell curve/ Gaussian distributed.
+  
+## Are there differences in activity patterns between weekdays and weekends?
+  
 ```{r}
-sum_na<-sum(is.na(oridata$steps))
-print(sum_na)
-```
-Total missing value is `r sum_na`.
+newdata$daytype<-weekdays(newdata$date)
+head(newdata)
+newdata$type<-"weekday"
+newdata$type[is.element(newdata$daytype,set = c("Saturday","Sunday"))]<-"weekend"
+newdata$type<-as.factor(newdata$type)
+str(newdata)
 
-2. Filling the missing values with mean of that 5 minute interval, i.e. using values from previous step.
-```{r}
-data2<-oridata
-retrieve_time<-data2$interval[is.na(data2$steps)]
-rtimedf<-data.frame(index=1:length(retrieve_time),interval=retrieve_time)
-rmergedf<-merge(rtimedf,combine2)
-rmergedf<-rmergedf[order(rmergedf$index),]
-data2$steps[is.na(data2$steps)]<-rmergedf$average_steps
-sum(is.na(data2$steps))
-head(data2)
-```
-3. Now we have a new dataset with missing values filled in.
-4. Create a histogram of the total number of steps taken each day.
-```{r}
-combine3<-aggregate(data2$steps,by=list(data2$date),FUN=sum)
-names(combine3)<-c("date","total_steps")
-head(combine3)
-hist(combine3$total_steps,col="green",xlab="Total Number of Steps",ylab="Frequency",main="Histogram of total steps each day")
-```
-
-Now we calculate the mean and median of total number of steps taken per day.
-
-```{r}
-mean2<-mean(combine3$total_steps)
-median2<-median(combine3$total_steps)
-```
-
-The mean is `r mean2`. 
-The median is `r median2`.
-
-So compares the above two values with the previous values.
-Old mean = `r mean`. New mean = `r mean2`.  
-Old median = `r median`. New median = `r median2`.  
-We can see there are only slight difference in these values. Hence, the impact of inputing missing values is very small.
-
-##Are there differences in activity patterns between weekdays and weekends?
-
-We will use the new data set (with filled missing value).
-
-1. Create a new factor variable.
-```{r}
-data2<-cbind(data2,weekdays(data2$date))
-names(data2)[4]<-"day"
-levels(data2$day)<-c("weekday","weekday","weekend","weekend","weekday","weekday","weekday")
-table(data2$day)
-head(data2)
-```
-2. Make a panel plot.
-```{r}
+newintervalsteps<-aggregate(newdata$steps,by=list(newdata$type,newdata$interval),FUN=mean, na.rm=TRUE)
+head(newintervalsteps)
+names(newintervalsteps)<-c("type","interval","averagesteps")
 library(lattice)
-combine4<-aggregate(data2$steps,by=list(data2$interval,data2$day),FUN=mean)
-names(combine4)<-c("interval","day","average_steps")
-head(combine4)
-xyplot(combine4$average_steps ~ combine4$interval | combine4$day,layout=c(1,2), type="l",xlab="Interval",ylab="Average number of steps")
+xyplot(averagesteps ~ interval | type,data=newintervalsteps,layout=c(1,2), type="l",xlab="5 minutes interval",ylab="Average number of steps", main = "Comparisons by weekday and weekend")
 ```
-
-From the plot, we can see that there are differences on daily activities between weekends and weekdays. During weekend, the person is more active and the active period and intensity is more constant compared to during weekdays.
+  
+  Notice that the maximum average steps during weekday is larger than that during weekend. Notice that during weekend, the sample walks more steps for most of the time interval compared to that during weekday.
